--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,22 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: 'Lato';
+  src: local('Lato'), url(./fonts/Gotham/Gotham-Light.otf) format('opentype');
 }
 
+@font-face {
+  font-family: 'Lato';
+  font-weight: 900;
+  src: local('Lato'), url(./fonts/Gotham/Gotham-Bold.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-weight: 900;
+  src: local('Lato'), url(./fonts/Gotham/Gotham-Black.otf) format('opentype');
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +38,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
